--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - www.codingnepalweb.com -->
-<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Website Homepage HTML and CSS | CodingNepal</title>
+    <title>Website login test</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header class="header">
       <nav class="navbar">
-        <h2 class="logo"><a href="#">CodingNepal</a></h2>
+        <h2 class="logo"><a href="#">CodingTest</a></h2>
         <input type="checkbox" id="menu-toggle" />
         <label for="menu-toggle" id="hamburger-btn">
           <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
